Bug#8412: For replication to work correctly, the prologue and epilogue to an SQL statement should not have an error code even when the SQL statement itself has an error code.

mysql-test/r/rpl_insert_id.result:
  Adding test to ensure that slave handles error statement gracefully.
mysql-test/t/rpl_insert_id.test:
  Adding test to ensure that slave handles error statement gracefully.
sql/log.cc:
  Setting error code to 0 for SQL statement prologue and epilogue.